# raytracer

./: Cargo.toml  README.md
benchmarks/: README.md  results-no-bvh.md
examples/: from_scene.rs
examples/from_scene/: Cargo.toml
examples/from_scene/src/: main.rs
examples/gui/: Cargo.toml  scene.yaml
examples/gui/src/: main.rs  raytracing_worker.rs  render_controls.rs  render_progress.rs  ui_message.rs
examples/minimal_bvh_test/: Cargo.toml
hyperfine-results/: results-bvh-base.md
raytracing_lib/: Cargo.toml
raytracing_lib/benches/: bvh.rs  full_scene.rs
raytracing_lib/src/: aabb.rs  camera.rs  canvas.rs  lib.rs  material_atlas.rs  renderer.rs  world.rs
raytracing_lib/src/export/: mod.rs  pixel.rs
raytracing_lib/src/material/: dielectric.rs  metal.rs
raytracing_lib/src/object/: sphere.rs
src/: aabb.rs  bin.rs  bvh.rs  camera.rs  canvas.rs  collision.rs  lib.rs  main.rs  minimal_bin.rs  renderer.rs  scene.rs  utils.rs  world.rs
src/export/: mod.rs  writers.rs
src/lib/: aabb.rs  bvh.rs  camera.rs  canvas.rs  collision.rs  lib.rs  material_atlas.rs  ray.rs  renderer.rs  utils.rs  world.rs
src/lib/export/: writers.rs
src/lib/material/: dielectric.rs  metal.rs  mod.rs
src/lib/object/: mod.rs  sphere.rs
src/material/: diffuse.rs  metal.rs  mod.rs
src/objects/: sphere.rs
