[package]
name = "raytracer"
version = "0.1.0"
authors = ["Depasse Arthur <arthur.depasse96@gmail.com>"]
edition = "2018"

[lib]
name = "raytracing_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "raytracer"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.9"
rand = "0.7.3"
ndarray = { version= "0.14.0", features= ["rayon"]}
itertools = "0.9.0"
indicatif = "0.15.0"
crossbeam-channel = "0.5.0"
threadpool = "1.8.1"
