[workspace]
members = ["raytracing_lib", "examples/*"]
resolver = "2"

[workspace.dependencies]
nalgebra-glm = "0.9"
rand = "0.7.3"
ndarray = { version = "0.14.0", features = ["rayon"] }
itertools = "0.9.0"
crossbeam-channel = "0.5.0"
threadpool = "1.8.1"
derive_more = "0.99.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
