[package]
name = "raytracing_lib"
version = "0.1.0"
authors = ["Depasse Arthur <arthur.depasse96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
itertools = { workspace = true }
indicatif = "0.15.0"
crossbeam-channel = { workspace = true }
threadpool = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
bytes = { version = "1.10.1", optional = true }

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "bvh"
harness = false

[[bench]]
name = "full_scene"
harness = false
